--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salt n Pepper</title>
+
+    <!-- Styles Link -->
     <link rel="stylesheet" href="./public/css/style.css">
     <link rel="stylesheet" href="./public/css/utilities.css">
+
+ <!-- Font Link -->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Salt n Pepper</h1>
+ <div class="container">
+
+     <!-- navbar started  -->
+
+     <header class="d-flex justify-around align-center mt-1 wrap">
+         <div>
+             <img class="header-logo" src="./assets/index/snp-resturant-logo.webp" alt="logo">
+         </div>
+         <div>
+             <nav class="d-flex gap align-center wrap">
+                 <p class="nav-items pointer">Home</p>
+                 <p class="nav-items pointer">About us</p>
+                 <p class="nav-items pointer">Publications</p>
+                 <p class="nav-items pointer">Feedback</p>
+                 <button class="pointer" id="franchise-btn">Get a Franchise</button>
+                 <button class="pointer" id="order-btn">Order Online</button>
+             </nav>
+         </div>
+     </header>
+     <!-- navbar ended -->
+
+     <main>
+         <!-- <img src="./assets/6d49fde6-2e27-4068-8b27-73bd0ee60cde.webp" alt="carousel"> -->
+     </main>
+ </div>
 </body>
+
 </html>
