--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <div>
              <nav class="d-flex gap align-center wrap">
                  <p class="nav-items pointer">Home</p>
-                 <p class="nav-items pointer">About us</p>
+                 <p class="nav-items pointer">About</p>
                  <p class="nav-items pointer">Publications</p>
                  <p class="nav-items pointer">Feedback</p>
                  <button class="pointer" id="franchise-btn">Get a Franchise</button>
@@ -38,7 +38,7 @@
      <!-- navbar ended -->
 
      <main>
-         <!-- <img src="./assets/6d49fde6-2e27-4068-8b27-73bd0ee60cde.webp" alt="carousel"> -->
+         <img class="slider-img" src="./assets/index/slider-bg3.webp" alt="carousel">
      </main>
  </div>
 </body>
