--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salt n Pepper</title>
+    <title>Salt n Pepper | Home</title>
 
     <!-- Styles Link -->
-    <link rel="stylesheet" href="./public/css/style.css">
-    <link rel="stylesheet" href="./public/css/utilities.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/utilities.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 
  <!-- Font Link -->
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+
+ <!-- Icons Link -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
@@ -26,10 +31,10 @@
          </div>
          <div>
              <nav class="d-flex gap align-center wrap">
-                 <p class="nav-items pointer">Home</p>
-                 <p class="nav-items pointer">About</p>
-                 <p class="nav-items pointer">Publications</p>
-                 <p class="nav-items pointer">Feedback</p>
+                 <a class="nav-items pointer" href="#">Home</a>
+                 <a class="nav-items pointer" href="./about.html">About</a>
+                 <a class="nav-items pointer" href="./publications.html">Publications</a>
+                 <a class="nav-items pointer" href="./feedback.html">Feedback</a>
                  <button class="pointer" id="franchise-btn">Get a Franchise</button>
                  <button class="pointer" id="order-btn">Order Online</button>
              </nav>
@@ -37,9 +42,35 @@
      </header>
      <!-- navbar ended -->
 
-     <main>
-         <img class="slider-img" src="./assets/index/slider-bg3.webp" alt="carousel">
-     </main>
+        <div id="carouselIndicators" class="carousel slide">
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/slider-bg1.webp" class="d-block w-100" alt="slider-image1">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/slider-bg2.webp" class="d-block w-100" alt="slider-image2">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/slider-bg3.webp" class="d-block w-100" alt="slider-image3">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+    </div>
  </div>
 </body>
 
