--- a/feedback.html
+++ b/feedback.html
@@ -144,8 +144,8 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./publications.html">Publications</a></li>
-            <li><a href="#">Get a Franchise</a></li>
             <li><a href="./feedback.html">Feedback</a></li>
+            <li><a href="./franchise.html">Get a Franchise</a></li>
         </ul>
     </div>
 
