--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <div class="snp-restaurant">
 
             <div class="snp-restaurant-content">
-                <h1><span style="font-family: 'Caveat', cursive; font-size: 45px;">Salt'n Pepper </span> Restaurant</h1>
+                <h1><span style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 45px;">Salt'n Pepper </span> Restaurant</h1>
                 <p>The Salt’n Pepper Restaurants at Mall and Liberty Market Lahore, are considered to be the first proper family style restaurants in the food industry of Pakistan. These restaurants pride themselves for being symbolized as an eatery with a customer loyalty spanning over three generations. As a restaurant model, these have inspired the set-up of numerous other restaurants across Pakistan.</p>
             </div>
 
@@ -80,7 +80,7 @@
             <img src="./assets/about/snp-restuarant2.webp" alt="image not found">
 
             <div class="snp-restaurant-content margin-left">
-                <h1><span style="font-family: 'Caveat', cursive; font-size: 35px;">Salt'n Pepper </span> Restaurants (1992)</h1>
+                <h1><span style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 35px;">Salt'n Pepper </span> Restaurants (1992)</h1>
                 <p>The Salt’n Pepper Village Restaurant in Lahore is considered to be the restaurant that revolutionized dining experiences in Pakistan. The Village offers classic and modern sub-continental dishes. The village restaurant created a new concept of “Live Buffet” where everything is cooked in front of you in a ‘bazaar’ like atmosphere. The Village is an acclaimed restaurant brand, credited with the promotion of the Pakistani cuisine and the revival of some old recipes. The Village Lahore has an seating capacity of over 300 guests. This restaurant has hosted countless lunches and dinners for local and foreign dignitaries and celebrities like the late Princess Diana, late prime minister of Pakistan Benazir Bhutto, ex-president of Pakistan Gen. (R) Pervez Musharraf and many more.</p>
             </div>
             
