--- a/index.html
+++ b/index.html
@@ -432,16 +432,12 @@
   </footer>
 
   <div class="copyright">
-      <hr>
-  
       <div class="copyright-content">
           <p>&copy; 2024 Salt'n Pepper Restaurant</p>
           <p>Clone with ❤️ by Daniyal Haider</p>
           <p>Powered by tossdown.com</p>
       </div>
-      
   </div>
 
-
-
+</body>
 </html>
